deployment.yaml
apiVersion: apps/v1beta1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: skywalking
  namespace: base
spec:
  selector:
    matchLabels:
      app: skywalking
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: skywalking
        tier: backend
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 100
      containers:
      - name: master
        image: vflong/skywalking 
        resources:
          requests:
            cpu: 1000m
            memory: 4096Mi
        ports:
        - containerPort: 8080
        - containerPort: 10800
        volumeMounts:
          - name: "datadir"
            mountPath: "/data/es/data"
      volumes:
        - name: "datadir"
          persistentVolumeClaim:
            claimName: datadir-skywalking
