service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skywalking
  namespace: base
  labels:
    app: skywalking
    tier: backend
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  - name: api
    port: 10800
    targetPort: 10800
  selector:
    app: skywalking
    tier: backend
